force-app/main/default/objects/Event_Test_1__e/Event_Test_1__e.object-meta.xml
<CustomObject>
    <description>Trial</description>
    <label>Printer Status</label>
    <pluralLabel>Printer Status</pluralLabel>
</CustomObject>