force-app/main/default/objects/Event_Test_1__e/fields/Ink_Status__c.field-meta.xml
<CustomField>
    <fullName>Ink_Status__c</fullName>
    <label>Ink Status</label>
    <length>18</length>
    <type>Text</type>
</CustomField>