force-app/main/default/objects/Event_Test_1__e/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <label>Serial Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>